--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "unix-checksum",
-	"version": "1.0.0",
-	"description": "Implementation of Unix sum and cksum algorithms",
+	"version": "1.1.0",
+	"description": "Implementation of Unix sum, cksum, and crc32 algorithms",
 	"main": "index.js",
 	"scripts": {
 		"test": "node ./test/test.js"
@@ -18,6 +18,8 @@
 		"sum",
 		"cksum",
 		"crc",
+		"crc32",
+		"crc32c",
 		"unix"
 	],
 	"author": {
