--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "unix-checksum",
-	"version": "4.0.2",
+	"version": "4.1.0",
 	"description": "Implementation of Unix sum, cksum, and crc32 algorithms",
 	"main": "index.js",
 	"scripts": {
@@ -9,7 +9,9 @@
 	"engines": {
 		"node": ">=8.00.0"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"bubblebabbler": "^1.0.0"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com:rinne/node-unix-checksum.git"
